--- a/src/pug/index.j2
+++ b/src/pug/index.j2
@@ -5,8 +5,8 @@ html(lang='en')
 
         meta(charset='utf-8')
         meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
-        meta(name='description', content='')
-        meta(name='author', content='')
+        meta(name="description", content="research, investigacion, science, ciencia, mathematics, matematicas, algebra, topology, topologia, homotopy, homotopia, homology, homologia, k-theory, teoria k, category theory, categorias, representation theory, teoría de representaciones, university of seville, universidad de sevilla")
+        meta(name="author", content="Fernando Muro")
 
         // Core theme JS
         script(src='js/darkmode.js')
