--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -12103,12 +12103,17 @@ a:hover {
   text-decoration: none;
 }
 
-.paper-link {
-  padding: 0 4px;
+.btn-xs {
+  padding: 0px 4px;
   font-size: 0.75rem;
   font-weight: 700;
   text-transform: uppercase;
   font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+.btn-xs:hover,
+.btn-xs:focus {
+  color: #cf5331;
 }
 
 .professional-icons {
