--- a/src/pug/presentations.pug
+++ b/src/pug/presentations.pug
@@ -14,7 +14,7 @@ h3.col-lg-12.mt-3.mb-3.text-left
                 | 
                 | 28 November 2023, online seminar
             .card-footer
-                a.paper-link(href="assets/files/presentations/Haifa2023.pdf") Presentation
+                a.btn.btn-xs(href="assets/files/presentations/Haifa2023.pdf") Presentation
                 
 
 
@@ -26,8 +26,8 @@ h3.col-lg-12.mt-3.mb-3.text-left
                 | 
                 | 22 November 2023, Barcelona, Spain
             .card-footer
-                a.paper-link(href="assets/files/presentations/Barcelona2023.pdf") Presentation
-                a.paper-link(href="https://geoffroy.horel.org/OMG.html") Site
+                a.btn.btn-xs(href="assets/files/presentations/Barcelona2023.pdf") Presentation
+                a.btn.btn-xs(href="https://geoffroy.horel.org/OMG.html") Site
                 
 
 .text-center.mt-2
