--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -42,6 +42,7 @@ a {
     font-size: 0.75rem;
     font-weight: 700;
     text-transform: uppercase;
+    color: $primary;
     font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   }
   
