--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -112,7 +112,7 @@ html(lang='en')
                             data-bs-title="Zotero",
                             aria-label="Zotero")
                         
-                        a.btn.btn-primary.btn-xl(href='#about') Find Out More
+                        a.btn.btn-primary.btn-xl(href='#research') Find Out More
 
         // Research
         section#research.page-section
@@ -121,8 +121,8 @@ html(lang='en')
                 hr.divider
                 p.text-muted.mb-5.mx-5.text-center
                     | I work on algebraic topology, specifically on homotopy theory, and I also interact with related fields such as category theory, homological algebra, K-theory, and representation theory.
-                include papers.pug
-                include presentations.pug
+                include publications.pug
+                include presentations_max.pug
 
         // Portfolio
         #portfolio.bg-dark
