--- a/src/pug/papers.j2
+++ b/src/pug/papers.j2
@@ -1,42 +1,92 @@
-{% from "src/pug/_paper.j2" import paper %}
+{% from "src/pug/_macros.j2" import paper %}
 
-{% set maximum = 2 %}
+doctype html
+html(lang='en')
 
-{% set count = {'counter': 0} %}
-{% for entry in input %}
-{% if entry.type == '' and (entry.issued['date-parts'][0][0] | int) > 2020%}
-{% if count.counter < maximum %}
-{% if count.counter == 0 %}
-h3.col-lg-12.mt-3.mb-3.text-left 
-    .bi.bi-journal &nbsp; Preprints
-.row.row-cols-1.row-cols-xl-2.gx-5.gy-4.mb-4
-{% endif -%}
-    {% filter indent(width=4) %}
-    {{ paper(entry.id, entry.author, entry.title, entry.issued['date-parts'][0][0], entry.type, entry['container-title'], entry.volume, entry.number, entry.series, entry.page, entry.note, entry.DOI, entry.arxiv, entry.abstract, entry.bibtex, entry['zbmath_url']) }}
-    {% endfilter -%}
-{% elif count.counter == maximum -%}
-.text-center.mt-2
-    a.btn.btn-primary.btn-xl(href='#services') See all
-{% endif -%}
-{% if count.update({'counter': count.counter + 1}) %} {% endif %}
-{% endif -%}
-{% endfor %}
+    head
 
+        meta(charset='utf-8')
+        meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
+        meta(name="description", content="research, investigacion, science, ciencia, mathematics, matematicas, algebra, topology, topologia, homotopy, homotopia, homology, homologia, k-theory, teoria k, category theory, categorias, representation theory, teoría de representaciones, university of seville, universidad de sevilla")
+        meta(name="author", content="Fernando Muro")
+        meta(name="title", content="Fernando Muro's website")
 
-h3.col-lg-12.mt-3.mb-3.text-left 
-    .bi.bi-journal-check &nbsp; Papers
-.row.row-cols-1.row-cols-xl-2.gx-5.gy-4.mb-4
-{% set count = {'counter': 0} %}
-{% for entry in input %}
-{% if entry.type != '' %}
-{% if count.counter < maximum %}
-    {% filter indent(width=4) %}
-    {{ paper(entry.id, entry.author, entry.title, entry.issued['date-parts'][0][0], entry.type, entry['container-title'], entry.volume, entry.number, entry.series, entry.page, entry.note, entry.DOI, entry.arxiv, entry.abstract, entry.bibtex, entry['zbmath_url']) }}
-    {% endfilter -%}
-{% elif count.counter == maximum -%}
-.text-center.mt-2
-    a.btn.btn-primary.btn-xl(href='#services') See all
-{% endif -%}
-{% if count.update({'counter': count.counter + 1}) %} {% endif -%}
-{% endif -%}
-{% endfor %}
+        // Core theme JS
+        script(src='js/darkmode.js')
+
+        // Google fonts
+        link(rel="preconnect", href="https://fonts.googleapis.com")
+        link(rel="preconnect", href="https://fonts.gstatic.com", crossorigin)
+        link(href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap", rel="stylesheet")
+        link(href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet")
+
+        // Favicon
+        link(rel='icon', type='image/x-icon', href='assets/favicon.ico')
+
+        // Academicons
+        link(rel="stylesheet", href="assets/css/academicons.min.css")
+
+        // Icomoon
+        link(rel="stylesheet", href="assets/css/icomoon.css", type="text/css")
+
+        // SimpleLightbox plugin CSS
+        link(href='assets/css/simpleLightbox.min.css', rel='stylesheet')
+
+        // Core theme CSS (includes Bootstrap)
+        link(href='css/styles.css', rel='stylesheet')
+
+        // MathJax
+        script(src="js/mathjax-config.js", defer)
+        script(type="text/javascript", id="MathJax-script", defer, src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js")
+
+    body#page-top
+
+        // Navigation
+        nav#secondaryNav.navbar.navbar-expand-lg.navbar-light.fixed-top.py-3
+            .container.px-4.px-lg-5
+                a.navbar-brand(href='index.html#page-top') Fernando Muro's website
+                button.navbar-toggler.navbar-toggler-right(type='button', data-bs-toggle='collapse', data-bs-target='#navbarResponsive', aria-controls='navbarResponsive', aria-expanded='false', aria-label='Toggle navigation')
+                    span.navbar-toggler-icon
+                #navbarResponsive.collapse.navbar-collapse
+                    ul.navbar-nav.ms-auto.my-2.my-lg-0
+                        li.nav-item
+                            a.nav-link(href='index.html#research') Research
+                        li.nav-item
+                            a.nav-link(href='index.html#portfolio') Gallery
+                        li.nav-item
+                            a.nav-link(href='index.html#contact') Contact
+
+        // Cards
+        section#cards.page-section
+            .container.px-4.px-lg-5
+                h2.text-center.mt-0 Papers
+                hr.divider
+                .row.row-cols-1.row-cols-xl-2.gx-5.gy-4.mb-4
+                {% for entry in input %}
+                {% if entry.type != '' %}
+                    {% filter indent(width=20) %}
+                    {{ paper(entry.id, entry.author, entry.title, entry.issued['date-parts'][0][0], entry.type, entry['container-title'], entry.volume, entry.number, entry.series, entry.page, entry.note, entry.DOI, entry.arxiv, entry.abstract, entry.bibtex, entry['zbmath_url']) }}
+                    {% endfilter -%}
+                {% endif -%}
+                {% endfor %}
+
+        // Footer
+        footer.py-5
+            .container.px-4.px-lg-5
+                .small.text-center.text-muted
+                    | Copyright &copy; 2024 - 
+                    a(href="#page-top") Fernando Muro
+                    |. Powered by 
+                    a(href='https://startbootstrap.com') Start Bootstrap 
+                    | with 
+                    a(href='https://startbootstrap.com/theme/creative') Creative 
+                    | theme.
+
+        // Bootstrap core JS
+        script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js')
+
+        // SimpleLightbox plugin JS
+        script(src='js/simpleLightbox.min.js', rel="stylesheet")
+
+        // Core theme JS
+        script(src='js/scripts.js')
