--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -12214,6 +12214,56 @@ hr.divider-light {
   }
 }
 
+#secondaryNav {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  background-color: var(--bs-body-bg);
+  transition: background-color 0.2s ease;
+}
+#secondaryNav .navbar-brand {
+  font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-weight: 700;
+  color: var(--bs-text-primary);
+}
+#secondaryNav .navbar-brand:hover {
+  color: #f4623a;
+}
+#secondaryNav .navbar-nav .nav-item .nav-link {
+  color: var(--bs-text-primary);
+  font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-weight: 700;
+  font-size: 0.9rem;
+  padding: 0.75rem 0;
+}
+#secondaryNav .navbar-nav .nav-item .nav-link:hover, #secondaryNav .navbar-nav .nav-item .nav-link:active {
+  color: #f4623a;
+}
+#secondaryNav .navbar-nav .nav-item .nav-link.active {
+  color: #f4623a !important;
+}
+@media (min-width: 992px) {
+  #secondaryNav {
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+    background-color: var(--bs-body-bg);
+    transition: background-color 0.2s ease;
+  }
+  #secondaryNav .navbar-brand {
+    color: var(--bs-text-primary);
+  }
+  #secondaryNav .navbar-brand:hover {
+    color: #f4623a;
+  }
+  #secondaryNav .navbar-nav .nav-item .nav-link {
+    color: var(--bs-text-primary);
+    padding: 0 1rem;
+  }
+  #secondaryNav .navbar-nav .nav-item .nav-link:hover {
+    color: #f4623a;
+  }
+  #secondaryNav .navbar-nav .nav-item:last-child .nav-link {
+    padding-right: 0;
+  }
+}
+
 /*!
  * Bootstrap Icons v1.11.3 (https://icons.getbootstrap.com/)
  * Copyright 2019-2024 The Bootstrap Authors
