--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -97,3 +97,74 @@
         }
     }
 }
+
+#secondaryNav {
+    box-shadow: $box-shadow;
+    background-color: var(--bs-body-bg);
+    transition: background-color 0.2s ease;
+
+    .navbar-brand {
+        font-family: $font-family-sans-serif;
+        font-weight: $font-weight-bold;
+        color: var(--bs-text-primary);
+
+        &:hover {
+            color: $primary;
+        }
+    }
+
+    .navbar-nav {
+        .nav-item {
+            .nav-link {
+                color: var(--bs-text-primary);
+                font-family: $font-family-sans-serif;
+                font-weight: $font-weight-bold;
+                font-size: 0.9rem;
+                padding: 0.75rem 0;
+
+                &:hover,
+                &:active {
+                    color: $primary;
+                }
+
+                &.active {
+                    color: $primary !important;
+                }
+            }
+        }
+    }
+
+    @include media-breakpoint-up(lg) {
+        // Base styling for the navbar - screen sizes greater than the large breakpoint
+        box-shadow: $box-shadow;
+        background-color: var(--bs-body-bg);
+        transition: background-color 0.2s ease;
+
+        .navbar-brand {
+            color: var(--bs-text-primary);
+
+            &:hover {
+                color: $primary;
+            }
+        }
+
+        .navbar-nav {
+            .nav-item {
+                .nav-link {
+                    color: var(--bs-text-primary);
+                    padding: 0 1rem;
+
+                    &:hover {
+                        color: $primary;
+                    }
+                }
+
+                &:last-child {
+                    .nav-link {
+                        padding-right: 0;
+                    }
+                }
+            }
+        }
+    }
+}
