--- a/src/pug/publications.pug
+++ b/src/pug/publications.pug
@@ -92,7 +92,7 @@ h3.col-lg-12.mt-3.mb-3.text-left
 
 
 .text-center.mt-2
-    a.btn.btn-primary.btn-xl(href='preprints.html') See all
+    a.btn.btn-primary.btn-xl(href='preprints.html') See all preprints
 
 
 
@@ -224,7 +224,7 @@ h3.col-lg-12.mt-3.mb-3.text-left
         
 
 .text-center.mt-2
-    a.btn.btn-primary.btn-xl(href='papers.html') See all
+    a.btn.btn-primary.btn-xl(href='papers.html') See all papers
 
 
 
