--- a/src/pug/presentations_max.pug
+++ b/src/pug/presentations_max.pug
@@ -40,7 +40,7 @@ h3.col-lg-12.mt-3.mb-3.text-left
 
 
 .text-center.mt-2
-    a.btn.btn-primary.btn-xl(href='presentations.html') See all
+    a.btn.btn-primary.btn-xl(href='presentations.html') See all presentations
 
 
 
