--- a/src/pug/publications.j2
+++ b/src/pug/publications.j2
@@ -29,9 +29,18 @@ h3.col-lg-12.mt-3.mb-3.text-left
 {% set count = {'counter': 0} %}
 {% for entry in input %}
 {% if entry.type != '' %}
+{% if entry.id in extras.keys() %}
+{% if extras[entry.id] == ''%}
+{% set pdf = ('a.btn.btn-xs(href="assets/files/papers/' ~ entry.id ~ '.pdf") PDF') %}
+{% else %}
+{% set pdf = ('a.btn.btn-xs(href="' ~ extras[entry.id] ~ '") PDF') %}
+{% endif %}
+{% else %}
+{% set pdf = '' %}
+{% endif %}
 {% if count.counter < maximum %}
     {% filter indent(width=4) %}
-    {{ paper(entry.id, entry.author, entry.title, entry.issued['date-parts'][0][0], entry.type, entry['container-title'], entry.volume, entry.number, entry.series, entry.page, entry.note, entry.DOI, entry.arxiv, entry.abstract, entry.bibtex, entry['zbmath_url']) }}
+    {{ paper(entry.id, entry.author, entry.title, entry.issued['date-parts'][0][0], entry.type, entry['container-title'], entry.volume, entry.number, entry.series, entry.page, entry.note, entry.DOI, entry.arxiv, entry.abstract, entry.bibtex, entry['zbmath_url'], pdf) }}
     {% endfilter -%}
 {% elif count.counter == maximum -%}
 .text-center.mt-2
