add icons t subpage titles

--- a/src/pug/presentations.j2
+++ b/src/pug/presentations.j2
@@ -59,7 +59,8 @@ html(lang='en')
         // Cards
         section#cards.page-section
             .container.px-4.px-lg-5
-                h2.text-center.mt-0 Presentations
+                h2.text-center.mt-0 
+                    .bi.bi-easel &nbsp; Presentations
                 hr.divider
                 .row.row-cols-1.row-cols-xl-2.gx-5.gy-4.mb-4
                 {% for entry in input %}
