exclude aux html from output

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -121,8 +121,8 @@ html(lang='en')
                 hr.divider
                 p.text-muted.mb-5.mx-5.text-center
                     | I work on algebraic topology, specifically on homotopy theory, and I also interact with related fields such as category theory, homological algebra, K-theory, and representation theory.
-                include publications.pug
-                include presentations_max.pug
+                include ../subfiles/publications.pug
+                include ../subfiles/presentations_max.pug
 
         // Portfolio
         #portfolio.bg-dark
