--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -51,6 +51,12 @@ html(lang='en')
                         li.nav-item
                             a.nav-link(href='#research') Research
                         li.nav-item
+                            a.nav-link(href='papers.html') Papers
+                        li.nav-item
+                            a.nav-link(href='preprints.html') Prerints
+                        li.nav-item
+                            a.nav-link(href='presentations.html') Presentations
+                        li.nav-item
                             a.nav-link(href='#portfolio') Gallery
                         li.nav-item
                             a.nav-link(href='#contact') Contact
