--- a/src/pug/papers.pug
+++ b/src/pug/papers.pug
@@ -52,6 +52,12 @@ html(lang='en')
                         li.nav-item
                             a.nav-link(href='index.html#research') Research
                         li.nav-item
+                            a.nav-link(href='papers.html') Papers
+                        li.nav-item
+                            a.nav-link(href='preprints.html') Prerints
+                        li.nav-item
+                            a.nav-link(href='presentations.html') Presentations
+                        li.nav-item
                             a.nav-link(href='index.html#portfolio') Gallery
                         li.nav-item
                             a.nav-link(href='index.html#contact') Contact
