imrpove secondary navbar

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -131,7 +131,7 @@ html(lang='en')
         // Research
         section#research.page-section
             .container.px-4.px-lg-5
-                h2.text-center.mt-0 Papers, preprints, presentations...
+                h2.text-center.mt-0 Research
                 hr.divider
                 p.text-muted.mb-5.mx-5.text-center
                     | I work on algebraic topology, specifically on homotopy theory, and I also interact with related fields such as category theory, homological algebra, K-theory, and representation theory.
