--- a/src/pug/preprints.j2
+++ b/src/pug/preprints.j2
@@ -54,7 +54,7 @@ html(lang='en')
                         li.nav-item
                             a.nav-link(href='papers.html') Papers
                         li.nav-item
-                            a.nav-link(href='preprints.html') Prerints
+                            a.nav-link(href='#page-top') Prerints
                         li.nav-item
                             a.nav-link(href='presentations.html') Presentations
                         li.nav-item
@@ -63,7 +63,7 @@ html(lang='en')
                             a.nav-link(href='index.html#contact') Contact
 
         // Cards
-        section#cards.page-section
+        section#preprints.page-section
             .container.px-4.px-lg-5
                 h2.text-center.mt-0 
                     .bi.bi-journal &nbsp; Preprints
