--- a/src/pug/preprints.pug
+++ b/src/pug/preprints.pug
@@ -54,7 +54,7 @@ html(lang='en')
                         li.nav-item
                             a.nav-link(href='papers.html') Papers
                         li.nav-item
-                            a.nav-link(href='preprints.html') Prerints
+                            a.nav-link(href='#page-top') Prerints
                         li.nav-item
                             a.nav-link(href='presentations.html') Presentations
                         li.nav-item
@@ -63,7 +63,7 @@ html(lang='en')
                             a.nav-link(href='index.html#contact') Contact
 
         // Cards
-        section#cards.page-section
+        section#preprints.page-section
             .container.px-4.px-lg-5
                 h2.text-center.mt-0 
                     .bi.bi-journal &nbsp; Preprints
@@ -80,9 +80,9 @@ html(lang='en')
                     .col
                         .card.shadow.rounded.h-100
                             .card-body
-                                | Ai Guan and Fernando Muro.<br>
-                                | #[strong Operations on the de Rham cohomology of Poisson and Jacobi manifolds].<br>
-                                |   2023. 
+                                | Ai Guan and Fernando Muro<br>
+                                | #[strong Operations on the de Rham cohomology of Poisson and Jacobi manifolds]<br>
+                                |   2023
                             .card-footer
                                 
                                 
@@ -120,9 +120,9 @@ html(lang='en')
                     .col
                         .card.shadow.rounded.h-100
                             .card-body
-                                | Gustavo Jasso, Bernhard Keller and Fernando Muro.<br>
-                                | #[strong The Donovan–Wemyss Conjecture via the Derived Auslander–Iyama Correspondence].<br>
-                                |   2023. 
+                                | Gustavo Jasso, Bernhard Keller and Fernando Muro<br>
+                                | #[strong The Donovan–Wemyss Conjecture via the Derived Auslander–Iyama Correspondence]<br>
+                                |   2023
                             .card-footer
                                 
                                 
@@ -161,9 +161,9 @@ html(lang='en')
                     .col
                         .card.shadow.rounded.h-100
                             .card-body
-                                | Gustavo Jasso, Bernhard Keller and Fernando Muro.<br>
-                                | #[strong The Derived Auslander-Iyama Correspondence].<br>
-                                |   2022. 
+                                | Gustavo Jasso, Bernhard Keller and Fernando Muro<br>
+                                | #[strong The Derived Auslander-Iyama Correspondence]<br>
+                                |   2022
                             .card-footer
                                 
                                 
@@ -201,9 +201,9 @@ html(lang='en')
                     .col
                         .card.shadow.rounded.h-100
                             .card-body
-                                | Victor Carmona, Ramon Flores and Fernando Muro.<br>
-                                | #[strong A model structure for locally constant factorization algebras].<br>
-                                |   2021. 
+                                | Victor Carmona, Ramon Flores and Fernando Muro<br>
+                                | #[strong A model structure for locally constant factorization algebras]<br>
+                                |   2021
                             .card-footer
                                 
                                 
