--- a/src/pug/presentations.j2
+++ b/src/pug/presentations.j2
@@ -56,14 +56,14 @@ html(lang='en')
                         li.nav-item
                             a.nav-link(href='preprints.html') Prerints
                         li.nav-item
-                            a.nav-link(href='presentations.html') Presentations
+                            a.nav-link(href='#page-top') Presentations
                         li.nav-item
                             a.nav-link(href='index.html#portfolio') Gallery
                         li.nav-item
                             a.nav-link(href='index.html#contact') Contact
 
         // Cards
-        section#cards.page-section
+        section#presentations.page-section
             .container.px-4.px-lg-5
                 h2.text-center.mt-0 
                     .bi.bi-easel &nbsp; Presentations
