--- a/src/subfiles/publications.pug
+++ b/src/subfiles/publications.pug
@@ -18,9 +18,9 @@ h3.col-lg-12.mt-3.mb-3.text-left
     .col
         .card.shadow.rounded.h-100
             .card-body
-                | Ai Guan and Fernando Muro.<br>
-                | #[strong Operations on the de Rham cohomology of Poisson and Jacobi manifolds].<br>
-                |   2023. 
+                | Ai Guan and Fernando Muro<br>
+                | #[strong Operations on the de Rham cohomology of Poisson and Jacobi manifolds]<br>
+                |   2023
             .card-footer
                 
                 
@@ -59,9 +59,9 @@ h3.col-lg-12.mt-3.mb-3.text-left
     .col
         .card.shadow.rounded.h-100
             .card-body
-                | Gustavo Jasso, Bernhard Keller and Fernando Muro.<br>
-                | #[strong The Donovan–Wemyss Conjecture via the Derived Auslander–Iyama Correspondence].<br>
-                |   2023. 
+                | Gustavo Jasso, Bernhard Keller and Fernando Muro<br>
+                | #[strong The Donovan–Wemyss Conjecture via the Derived Auslander–Iyama Correspondence]<br>
+                |   2023
             .card-footer
                 
                 
@@ -158,9 +158,9 @@ h3.col-lg-12.mt-3.mb-3.text-left
     .col
         .card.shadow.rounded.h-100
             .card-body
-                | Jeroen Maes and Fernando Muro.<br>
-                | #[strong Derived homotopy algebras].<br>
-                | #[i Proc. R. Soc. Edinb., Sect. A, Math.]   153 (2023), 1198-1243. 
+                | Jeroen Maes and Fernando Muro<br>
+                | #[strong Derived homotopy algebras]<br>
+                | #[i Proc. R. Soc. Edinb., Sect. A, Math.]   153 (2023), 1198-1243
             .card-footer
                 
                 a.btn.btn-xs(href="https://doi.org/10.1017/prm.2022.42") publisher
@@ -201,9 +201,9 @@ h3.col-lg-12.mt-3.mb-3.text-left
     .col
         .card.shadow.rounded.h-100
             .card-body
-                | Fernando Muro.<br>
-                | #[strong Massey products for algebras over operads].<br>
-                | #[i Commun. Algebra]   51 (2023), 3298-3313. 
+                | Fernando Muro<br>
+                | #[strong Massey products for algebras over operads]<br>
+                | #[i Commun. Algebra]   51 (2023), 3298-3313
             .card-footer
                 
                 a.btn.btn-xs(href="https://doi.org/10.1080/00927872.2023.2181780") publisher
