--- a/src/pug/papers.j2
+++ b/src/pug/papers.j2
@@ -52,7 +52,7 @@ html(lang='en')
                         li.nav-item
                             a.nav-link(href='index.html#research') Research
                         li.nav-item
-                            a.nav-link(href='papers.html') Papers
+                            a.nav-link(href='#page-top') Papers
                         li.nav-item
                             a.nav-link(href='preprints.html') Prerints
                         li.nav-item
@@ -63,7 +63,7 @@ html(lang='en')
                             a.nav-link(href='index.html#contact') Contact
 
         // Cards
-        section#cards.page-section
+        section#papers.page-section
             .container.px-4.px-lg-5
                 h2.text-center.mt-0 
                     .bi.bi-journal-check &nbsp; Papers
