--- a/src/pug/papers.j2
+++ b/src/pug/papers.j2
@@ -9,7 +9,8 @@ html(lang='en')
         meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
         meta(name="description", content="research, investigacion, science, ciencia, mathematics, matematicas, algebra, topology, topologia, homotopy, homotopia, homology, homologia, k-theory, teoria k, category theory, categorias, representation theory, teoría de representaciones, university of seville, universidad de sevilla")
         meta(name="author", content="Fernando Muro")
-        meta(name="title", content="Fernando Muro's website")
+        
+        title Fernando Muro's papers
 
         // Core theme JS
         script(src='js/darkmode.js')
