--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -62,7 +62,7 @@ html(lang='en')
                         li.nav-item
                             a.nav-link(href='papers.html') Papers
                         li.nav-item
-                            a.nav-link(href='preprints.html') Prerints
+                            a.nav-link(href='preprints.html') Preprints
                         li.nav-item
                             a.nav-link(href='presentations.html') Presentations
                         li.nav-item
