--- a/src/pug/papers.j2
+++ b/src/pug/papers.j2
@@ -55,7 +55,7 @@ html(lang='en')
                         li.nav-item
                             a.nav-link(href='#page-top') Papers
                         li.nav-item
-                            a.nav-link(href='preprints.html') Prerints
+                            a.nav-link(href='preprints.html') Preprints
                         li.nav-item
                             a.nav-link(href='presentations.html') Presentations
                         li.nav-item
