--- a/src/pug/preprints.pug
+++ b/src/pug/preprints.pug
@@ -55,7 +55,7 @@ html(lang='en')
                         li.nav-item
                             a.nav-link(href='papers.html') Papers
                         li.nav-item
-                            a.nav-link(href='#page-top') Prerints
+                            a.nav-link(href='#page-top') Preprints
                         li.nav-item
                             a.nav-link(href='presentations.html') Presentations
                         li.nav-item
