--- a/src/pug/presentations.pug
+++ b/src/pug/presentations.pug
@@ -55,7 +55,7 @@ html(lang='en')
                         li.nav-item
                             a.nav-link(href='papers.html') Papers
                         li.nav-item
-                            a.nav-link(href='preprints.html') Prerints
+                            a.nav-link(href='preprints.html') Preprints
                         li.nav-item
                             a.nav-link(href='#page-top') Presentations
                         li.nav-item
