--- a/src/pug/papers.j2
+++ b/src/pug/papers.j2
@@ -53,9 +53,9 @@ html(lang='en')
                         li.nav-item
                             a.nav-link(href='index.html#research') Research
                         li.nav-item
-                            a.nav-link(href='#page-top') Papers
-                        li.nav-item
                             a.nav-link(href='preprints.html') Preprints
+                        li.nav-item
+                            a.nav-link(href='#page-top') Papers
                         li.nav-item
                             a.nav-link(href='presentations.html') Presentations
                         li.nav-item
@@ -69,7 +69,7 @@ html(lang='en')
                 h2.text-center.mt-0 
                     .bi.bi-journal-check &nbsp; Papers
                 hr.divider
-                .row.row-cols-1.row-cols-xl-2.gx-5.gy-4.mb-4
+                .row.row-cols-1.gx-5.gy-4.mb-4
                 {% for entry in input %}
                 {% if entry.id in extras.keys() %}
                 {% if extras[entry.id] == ''%}
